compiler/tests/en/errors/nonconst_size.salam
// EXPECT: E011
func main:
    mut n : int = 3
    a : int[n] = [1, 2, 3]
end
